<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    style="@style/screenColor"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/homeText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#313131"
        android:fontFamily="@font/gothic_a1_thin"
        android:text="@string/title_home"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.1" />

        <TextView
            android:id="@+id/greetingText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="35dp"
            android:fontFamily="@font/gothic_a1"
            android:paddingTop="15dp"
            android:text="@string/Greeting"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/img"
            style="@style/MainViewStyle"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp" />

        <Button
            android:id="@+id/start"
            style="@style/fancybutton"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:backgroundTint="#024CAA"
            android:fontFamily="@font/gothic_a1"
            android:text="@string/start"
            android:textSize="40sp" />
    </LinearLayout>
</RelativeLayout>