<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    tools:context=".TranslationActivity">
    <TextView
        android:id="@+id/homeText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:fontFamily="@font/gothic_a1_thin"
        android:textColor="@color/black"
        android:text="@string/Home"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/camera_default"
        android:gravity="center"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:layout_marginVertical="20dp"
        >

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/translation_default"
        android:layout_weight=".25"
        android:background="@drawable/border"
        android:layout_marginBottom="20dp"
        >

    </TextView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="32dp"
        android:text="@string/conv_end"
        android:backgroundTint="#e040fb"
        android:textSize="40sp"
        android:fontFamily="@font/gothic_a1"
        android:layout_marginBottom="20dp"
        android:onClick="popup"
        >

    </Button>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:background="@android:color/white"
        app:menu="@menu/bottom_nav_menu"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black" />
</LinearLayout>