<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="rtl"
    tools:context=".ProfileFragment"
    style="@style/screenColor"
    >

    <TextView
        android:id="@+id/homeText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#313131"
        android:drawable="@drawable/border"
        android:fontFamily="@font/gothic_a1_thin"
        android:text="@string/title_profile"
        android:textAlignment="center"
        android:textColor="#EEEEEE"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileimg"
        android:layout_width="166dp"
        android:layout_height="166dp"
        android:layout_marginTop="24dp"

        android:scaleType="fitXY"
        android:src="@drawable/dark_arab_sign_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homeText"
        app:shapeAppearanceOverlay="@style/CircleShape"
        tools:visibility="visible" />

    <TextView
            android:id="@+id/usrnm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="30sp"
            android:fontFamily="@font/gothic_a1"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileimg"
            >

        </TextView>

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/usrnm"
        android:layout_marginTop="16dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/night_mode_option"
            android:textSize="20sp"
            android:fontFamily="@font/gothic_a1"
            android:textStyle="bold"
            android:layout_alignParentStart="true"
            >

        </TextView>
        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/modeswitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            app:thumbTint="@color/white"
           >

        </com.google.android.material.materialswitch.MaterialSwitch>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rl1"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/font_size_option"
            android:textSize="20sp"
            android:fontFamily="@font/gothic_a1"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            >

        </TextView>
        <TextView
            android:id="@+id/fontset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/font_size_hint"
            android:textSize="20sp"
            android:fontFamily="@font/gothic_a1"
            android:textStyle="normal"
            android:textAlignment="textEnd"
            >

        </TextView>

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/space"
        app:layout_constraintTop_toBottomOf="@id/usrnm"
        >

        <Button
            android:id="@+id/btn_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback_button"
            style="@style/button"
            android:fontFamily="@font/gothic_a1"
            android:padding="15dp"
            android:layout_margin="10dp"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_logout"
            />
        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout_button"
            style="@style/button"
            android:fontFamily="@font/gothic_a1"
            android:padding="15dp"
            android:layout_margin="10dp"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_feedback"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>